--- a/app/src/main/res/layout/activity_food_edit.xml
+++ b/app/src/main/res/layout/activity_food_edit.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context=".food.foodcustom01.AddActivity">
+    tools:context=".food.foodcustom02.FoodEditActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,14 +14,14 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/food_add_back"
+            android:id="@+id/food_edit_back"
             android:layout_width="0dp"
             android:padding="15dp"
-            android:background="@color/transparent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginTop="5dp"
             android:gravity="left"
+            android:background="@color/transparent"
             android:fontFamily="@font/bold"
             android:onClick="insert_data"
             android:text="취소"
@@ -29,28 +29,27 @@
 
         <TextView
             android:layout_width="50dp"
-            android:layout_height="55dp"
             android:gravity="center"
             android:text="음식메뉴"
             android:textColor="#000000"
+            android:layout_height="55dp"
             android:layout_weight="2" />
 
         <Button
-            android:id="@+id/add_next"
+            android:id="@+id/food_edit_next"
             android:layout_width="0dp"
+            android:padding="15dp"
             android:background="@color/transparent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginTop="5dp"
             android:gravity="right"
-            android:padding="15dp"
             android:fontFamily="@font/bold"
-            android:text="추가"
+            android:text="수정"
             android:textColor="#636CFF" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView"
         android:layout_width="64dp"
         android:layout_height="21dp"
         android:fontFamily="@font/medium"
@@ -69,15 +68,15 @@
         android:layout_marginBottom="0dp"/>
 
     <Button
-        android:id="@+id/expandBtn"
+        android:id="@+id/expandBtn_edit"
         android:layout_width="341dp"
         android:layout_height="35dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="-33dp"
         android:layout_marginBottom="-20dp"
         android:gravity="start|center_vertical"
-        android:text="선택하기"
         android:paddingLeft="15dp"
+        android:text="선택하기"
         android:fontFamily="@font/medium"
         android:textSize="14dp"
         android:textColor="#747CFF"
@@ -118,17 +117,17 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="23dp"
                     android:layout_marginRight="20dp"
+                    app:cardElevation="0dp"
                     app:cardCornerRadius="15dp"
-                    android:background="#B9BDFF"
-                    app:cardElevation="0dp">
+                    android:background="#B9BDFF">
 
                     <androidx.appcompat.widget.SearchView
                         android:id="@+id/searchViewfood"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="top"
-                        android:background="@drawable/search"
                         app:theme="@style/MySearchViewStyle"
+                        android:background="@drawable/search"
                         app:searchIcon="@android:color/transparent"
                         app:iconifiedByDefault="false"
                         app:queryBackground="@android:color/transparent"
@@ -178,9 +177,8 @@
                         android:layout_weight="247"
                         android:layout_marginLeft="2dp"
                         android:fontFamily="@font/medium"
-                        android:textColorHint="#9195D4"
-                        android:textColor="#3A46FF"
-                        android:hint="음식 추가하기"
+                        android:textColor="#9195D4"
+                        android:text="음식 추가하기"
                         android:textSize="12dp"
                         android:paddingLeft="15dp"
                         android:imeOptions="actionDone"
@@ -200,9 +198,8 @@
                         android:layout_marginLeft="0dp"
                         android:layout_weight="93"
                         android:fontFamily="@font/medium"
-                        android:textColorHint="#9195D4"
-                        android:hint="100 Kcal"
-                        android:textColor="#3A46FF"
+                        android:textColor="#9195D4"
+                        android:text="100 Kcal"
                         android:textSize="12dp"
                         android:gravity="center"
                         android:imeOptions="actionDone"
@@ -231,6 +228,7 @@
 
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -250,18 +248,16 @@
             android:layout_marginTop="50dp"
             android:layout_width="300dp"
             android:layout_height="20dp"
-            android:text="그램수를 안 적을 경우 자동으로 100g당 칼로리로 계산됩니다!"/>
-    </LinearLayout>
+            android:text="그램수를 안 적을 경우 자동으로 100g당 칼로리로 계산됩니다!"/></LinearLayout>
 
     <EditText
-        android:id="@+id/add_edit"
+        android:id="@+id/food_edit_edit"
         android:layout_width="341dp"
         android:layout_height="31dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="25dp"
         android:ems="10"
         android:fontFamily="@font/medium"
-        android:textColor="@color/black"
         android:textColorHint="#747CFF"
         android:hint="0g"
         android:inputType="number"
@@ -290,7 +286,7 @@
         android:layout_marginBottom="0dp"/>
 
     <Button
-        android:id="@+id/expandBtn_time"
+        android:id="@+id/expandBtn_time_edit"
         android:layout_width="341dp"
         android:layout_height="35dp"
         android:layout_gravity="center_horizontal"
@@ -312,10 +308,10 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         app:cardCornerRadius="10dp"
+        app:cardElevation="0dp"
         app:strokeColor="@android:color/transparent"
         app:cardBackgroundColor="@android:color/transparent"
         android:visibility="gone"
-        app:cardElevation="0dp"
         >
 
         <LinearLayout
@@ -337,6 +333,7 @@
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
+
 
 
 </LinearLayout>
