--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -359,12 +359,12 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView17"
+                        android:id="@+id/Home_cal"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
 
-                        android:text="860"
+                        android:text="0"
                         android:gravity="right|bottom"
                         android:textColor="#4E57E4"
 
