--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<!--    11/09 건희 추가 navbar 상단 모서리 둥글게 설정-->
+    <!--    11/09 건희 추가 navbar 상단 모서리 둥글게 설정-->
     <style name="RoundedBottomNavBar">
         <item name="cornerFamily">rounded</item>
 
         <item name="cornerSizeTopLeft">50dp</item>
         <item name="cornerSizeTopRight">50dp</item>
     </style>
-<!--bottomnav 효과 없애는 코드 11/14 추가-->
+    <!--bottomnav 효과 없애는 코드 11/14 추가-->
 
     <style name="bottom_nav_no_effect">
         <item name="android:itemBackground">@android:color/transparent</item>
         <item name="android:colorControlHighlight">@android:color/transparent</item>
     </style>
+    <style name="MySearchViewStyle" parent="Widget.AppCompat.SearchView">
+        <!-- 입력된 텍스트 색상 -->
+        <item name="android:editTextColor">#3A46FF</item>
+    </style>
+
 
 
     <style name="BottomNavigationTextStyle">
@@ -20,4 +25,4 @@
     </style>
 </resources>
 
-<!--app:shapeAppearanceOverlay="@style/RoundedBottomNavBar"-->
+    <!--app:shapeAppearanceOverlay="@style/RoundedBottomNavBar"-->
