--- a/app/src/main/res/drawable/button_sample4.xml
+++ b/app/src/main/res/drawable/button_sample4.xml
@@ -4,10 +4,12 @@
         <shape android:shape ="rectangle">
             <solid android:color="#FFD7D7"/>
             <stroke android:color="#FF7F7F" android:width="4dp"/>
-            <corners android:bottomLeftRadius="30dp"
+            <corners
+                android:bottomLeftRadius="30dp"
                 android:bottomRightRadius="30dp"
                 android:topLeftRadius="30dp"
-                android:topRightRadius="30dp"></corners>
+                android:topRightRadius="30dp" />
         </shape>
     </item>
 </layer-list>
+
