--- a/app/src/main/res/layout/fragment_mypage_main.xml
+++ b/app/src/main/res/layout/fragment_mypage_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mypage.mypage_main">
+    tools:context=".mypage.MypageMain">
 <!--
 android:background="#636CFF"
 -->
